--- a/src/css/fonts.less
+++ b/src/css/fonts.less
@@ -1,5 +1,15 @@
 @fontpath: "/assets/templates/triumf/fonts";
 @font-face {
+    font-family: 'webfont';
+    src: url('@{fontpath}/webfont.eot');
+    src: url('@{fontpath}/webfont.eot') format('embedded-opentype'),
+         url('@{fontpath}/webfont.woff2') format('woff2'),
+         url('@{fontpath}/webfont.woff') format('woff'),
+         url('@{fontpath}/webfont.ttf') format('truetype'),
+         url('@{fontpath}/webfont.svg#webfont') format('svg');
+}
+
+@font-face {
   font-family: 'Pragmatica';
   src: url('@{fontpath}/PragmaticaExtraLight.eot');
   src: url('@{fontpath}/PragmaticaExtraLight.woff2') format('woff2'),
