--- a/src/css/include/menu.less
+++ b/src/css/include/menu.less
@@ -1,3 +1,470 @@
-.menu {
-	
+.mainmenu {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	right: 0px;
+	z-index: 1000;
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #fff;
+	box-shadow: 0 10px 20px 0 rgba(161, 175, 194, .2);
+	transition: top .5s ease .3s, box-shadow .3s ease;
+	&-wrapper {
+		width: 100%;
+		padding-right: 40px;
+		padding-left: 40px;
+		&-container {
+			display: flex;
+			width: 100%;
+			height: 80px;
+			max-width: 1200px;
+			min-width: 1170px;
+			margin-right: auto;
+			margin-left: auto;
+			padding-right: 10px;
+			padding-left: 10px;
+			justify-content: space-between;
+			align-items: center;
+			a{
+				&.logo {
+					display: flex;
+					width: auto;
+					height: 60px;
+					padding-left: 0px;
+					align-items: center;
+					flex: 0 0 auto;
+					position: relative;
+					float: left;
+					text-decoration: none;
+					color: #333333;
+					img {
+						height: 30px;
+						width: 63px;
+					}
+				}
+				&.phone {
+					flex: 0 0 auto;
+					font-family: Roboto, sans-serif;
+					color: #046ecf;
+					font-size: 16px;
+					line-height: 1em;
+					font-weight: 400;
+					letter-spacing: 0.2px;
+					text-decoration: none;
+					cursor: pointer;
+				}
+			}
+			&-nav {
+				&.navigation {
+					.navigation {
+						display: flex;
+						background-color: #fff;
+						position: relative;
+						float: right;
+						&-panel {
+							display: flex;
+							&-wrapper {
+								display: flex;
+								float: left;
+							}
+							ul {
+								list-style: none;
+								padding: 0;
+								margin: 0;
+								font-weight: 400;
+								li {
+									padding: 0;
+									margin: 0;
+									a {
+										color: #153466;
+										transition: color 400ms ease;
+										&, &:hover, &:focus {
+											text-decoration: none;
+											outline: none !important;
+										}
+										&:hover {
+											color: #046ecf;
+										}
+									}
+								}
+							}
+						}
+						&-box {
+							&-button {
+								display: none;
+								.button {
+									&-box {
+										&-big {
+											width: 100%;
+											text-align: center;
+											.btn {
+												width: 100%;
+												color: #fff;
+												text-decoration: none;
+											}
+										}
+									}
+								}
+							}
+						}
+					}
+					ul.navigation {
+						&-list {
+							display: flex;
+							height: 30px;
+							align-items: center;
+							border-right: 1px solid rgba(141, 147, 154, 0.4);
+							border-left: 1px solid rgba(141, 147, 154, 0.4);
+							> li {
+								margin: 0 auto;
+								position: relative;
+								text-align: left;
+								display: flex;
+								width: auto;
+								height: 30px;
+								padding-top: 0px;
+								padding-right: 20px;
+								padding-left: 20px;
+								padding-bottom: 0px;
+								align-items: center;
+								transition: color 400ms ease;
+								font-family: Roboto, sans-serif;
+								color: #153466;
+								font-size: 15px;
+								line-height: 1em;
+								letter-spacing: 0.4px;
+								&.dropdown {
+									> ul.dropdown-list {
+										margin: 0;
+										position: absolute;
+										background-color: #fff;
+										display: block;
+										visibility: hidden;
+										min-width: 100%;
+										top: 60px;
+										right: 0px;
+										margin-top: 20px;
+										margin-right: 0px;
+										padding: 40px;
+										border-radius: 4px;
+										background-color: #fff;
+										box-shadow: 0 15px 40px 0 rgba(82, 111, 155, .5);
+										transition: top .4s ease;
+									}
+									&.open {
+										> ul.dropdown-list {
+											visibility: visible;
+											top: 35px;
+											> li {
+												position: relative;
+												vertical-align: top;
+												text-decoration: none;
+												color: #222222;
+												padding: 20px;
+												text-align: left;
+												margin-left: auto;
+												margin-right: auto;
+												white-space: nowrap;
+												display: flex;
+												height: 30px;
+												margin-bottom: 20px;
+												padding-top: 0px;
+												padding-bottom: 0px;
+												align-items: center;
+												font-family: Roboto, sans-serif;
+												color: #153466;
+												font-size: 15px;
+												line-height: 1em;
+												letter-spacing: 0.4px;
+												a {
+													
+												}
+											}
+										}
+									}
+								}
+							}
+							&.first {
+								
+							}
+							&.last {
+								
+							}
+						}
+					}
+				}
+			}
+			.close-block {
+				display: none;
+				.box-button-close {
+					display: flex;
+					flex-direction: column;
+					justify-content: space-between;
+					align-items: center;
+					background-color: transparent;
+					cursor: pointer;
+					width: 40px;
+					height: 20px;
+					background-color: transparent;
+					.line {
+						width: 40px;
+						height: 2px;
+						background-color: #153466;
+						transform-style: preserve-3d;
+						&:nth-child(1) {
+							transition: transform 200ms;
+							width: 40px;
+							height: 2px;
+							background-color: #153466;
+						}
+						&:nth-child(2) {
+							transition: width 200ms;
+							width: 30px;
+							height: 2px;
+							background-color: #153466;
+						}
+						&:nth-child(3) {
+							transition: transform 200ms;
+							width: 40px;
+							height: 2px;
+							background-color: #153466;
+						}
+					}
+				}
+				@media(max-width: 991px){
+					position: relative;
+					float: right;
+					padding: 18px;
+					padding-right: 0px;
+					font-size: 24px;
+					cursor: pointer;
+					z-index: 1000;
+					display: block;
+					.user-select();
+					.box-button-close {
+						height: 20px;
+						.line {
+							&:after {
+								display:none;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	&.modetop {
+		transition: top .7s ease, box-shadow .4s ease .3s;
+		top: -80px;
+		box-shadow: 0 0px 0px 0 rgba(161, 175, 194, .0);
+	}
+	@media(max-width: 991px){
+		z-index: 10000;
+		&-wrapper {
+			position: relative;
+			padding-right: 0px;
+			padding-left: 0px;
+			&-container {
+				min-width: auto;
+				justify-content: space-between;
+				&-nav {
+					visibility: hidden;
+					transition: all .7s ease;
+					position: fixed;
+					display: block;
+					width: 100vw;
+					width: 100%;
+					left: 100%;
+					top: 0px;
+					bottom:0px;
+					background-color: rgba(39, 49, 61, .7);
+					box-shadow: -1px 0 50px 0 rgba(82, 111, 155, .5);
+					&.navigation {
+						.navigation {
+							&-panel {
+								position: absolute;
+								left: 0px;
+								top: 0px;
+								right: 0px;
+								display: flex;
+								width: 320px;
+								height: 100%;
+								margin-left: auto;
+								padding-top: 80px;
+								padding-right: 30px;
+								padding-left: 0px;
+								flex-direction: column;
+								border-left: 2px solid #046ecf;
+								background-color: #fff;
+								box-shadow: -1px 0 50px 0 rgba(82, 111, 155, .5);
+								&-wrapper {
+									display: block;
+									float: none;
+									overflow-y: auto;
+									margin-right: -30px;
+									padding-left: 40px;
+									padding-right: 40px;
+									padding-bottom: 30px;
+								}
+							}
+						}
+						ul {
+							&.navigation {
+								&-list {
+									display: block;
+									flex-direction: row;
+									&:nth-child(1){
+										height: auto;
+										padding-top: 20px;
+										align-items: center;
+										border-style: solid none;
+										border-top-width: 1px;
+										border-top-color: hsla(212, 6%, 58%, .4);
+										border-bottom-width: 1px;
+										border-bottom-color: hsla(212, 6%, 58%, .4);
+									}
+									&:nth-child(2){
+										height: auto;
+										margin-bottom: 20px;
+										padding-top: 20px;
+										flex-direction: row;
+										align-items: flex-start;
+										border-bottom: 1px solid hsla(212, 6%, 58%, .4);
+										border-right-style: none;
+									}
+									> li {
+										flex-direction: row;
+										flex-direction: column;
+										height: auto;
+										min-height: 30px;
+										width: auto;
+										margin-right: auto;
+										margin-bottom: 20px;
+										margin-left: 0px;
+										padding-left: 0px;
+										align-items: flex-start;
+										&.dropdown {
+											> ul.dropdown-list {
+												position: relative;
+												visibility: visible;
+												box-shadow: none;
+												width: auto;
+												display: none;
+												flex-direction: column;
+												top: auto;
+												margin-top: 0;
+												padding: 0;
+												> li {
+													
+												}
+											}
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+.openmenu {
+	@media(max-width: 991px){
+		overflow: hidden;
+		.mainmenu {
+			&-wrapper {
+				&-container {
+					&-nav {
+						visibility: visible;
+						left:0%;
+						&.navigation {
+							.navigation {
+								&-panel {
+									
+								}
+								&-box {
+									&-button {
+										display: block;
+										.button {
+											&-box {
+												&-big {
+													.btn {
+														
+													}
+												}
+											}
+										}
+									}
+								}
+							}
+							ul {
+								&.navigation {
+									&-list {
+										border-left: none;
+										border-right: none;
+										li {
+											a {
+												display: block;
+												width: 100%;
+											}
+										}
+										> li {
+											&.dropdown {
+												> ul.dropdown-list {
+													display: none;
+													flex-direction: column;
+													> li {
+														min-height: 30px;
+														width: 100%;
+														margin-right: auto;
+														margin-bottom: 20px;
+														margin-left: 0px;
+														padding-left: 0px;
+														margin-left:0px;
+														padding-left:0px;
+														align-items: flex-start;
+														flex-direction: column;
+													}
+												}
+											}
+											&.open {
+												&.dropdown {
+													> ul.dropdown-list {
+														display: flex;
+														top:auto;
+														margin-top:35px;
+														> li {
+														}
+													}
+												}
+											}
+										}
+									}
+								}
+							}
+						}
+					}
+					.close-block {
+						.box-button-close {
+							height: 20px;
+							.line {
+								&:nth-child(1){
+									transform: translateX(0px) translateY(9px) translateZ(0px) rotateX(0deg) rotateY(0deg) rotateZ(45deg);
+								}
+								&:nth-child(2){
+									width: 0px;
+								}
+								&:nth-child(3){
+									transform: translateX(0px) translateY(-9px) translateZ(0px) rotateX(0deg) rotateY(0deg) rotateZ(-45deg);
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
