--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,10 +1,20 @@
-@import "reset.less";
 @import "fonts.less";
 @import "normalize.less";
+@import "reset.less";
 @import "mix/mixin.less";
 @import "animate/animate.less";
+@import "include/preload.less";
 @import "slick/slick.less";
 @import "slick/slick-theme.less";
+@import "include/slick.less";
+@import "include/column.less";
 @import "include/main.less";
+@import "include/menu.less";
 @import "include/hero.less";
 @import "include/head.less";
+@import "include/section.less";
+@import "include/actions.less";
+@import "include/tabs.less";
+@import "include/feedback.less";
+@import "include/footer.less";
+@import (less) "/../../bower_components/animate.css/animate.css";
