--- a/src/css/include/head.less
+++ b/src/css/include/head.less
@@ -44,13 +44,6 @@
 		margin-left: auto;
 		padding-right: 10px;
 		padding-left: 10px;
-		transform-origin: 50% 50%;
-		opacity: 0;
-		&.animate {
-			opacity: 1;
-			animation: headscale 2s ease;
-		}
-		
 		@media screen and (max-width: 991px) {
 			max-width: none;
 			min-width: auto;
@@ -75,6 +68,8 @@
 				display: flex;
 				flex-direction: row;
 				justify-content: flex-start;
+				transform-origin: 50% 50%;
+				opacity: 0;
 				.user-select();
 				&.left {
 					@media (max-width: 991px){
@@ -116,7 +111,7 @@
 						align-content: space-between;
 						align-items: center;
 						flex-direction: column;
-						min-width: 200px;
+						min-width: 240px;
 						line-height: 1.2em;
 						&:last-child {
 							margin-right: 0px;
@@ -125,8 +120,8 @@
 							height: 60px;
 							display: flex;
 							justify-content: center;
-							padding-right: 20px;
-							padding-left: 20px;
+							padding-right: 0px;
+							padding-left: 0px;
 							font-family: Roboto, sans-serif;
 							font-size: 16px;
 							font-weight: 400;
@@ -157,6 +152,8 @@
 							width: 100%;
 							.btn {
 								width: 100%;
+								padding-right: 20px;
+								padding-left: 20px;
 							}
 						}
 					}
@@ -222,6 +219,12 @@
 					right: auto;
 					height: auto;
 				}
+			}
+		}
+		&.animate {
+			.header-wrapper-section-column {
+				opacity: 1;
+				animation: headscale 1s ease;
 			}
 		}
 	}
