--- a/src/css/include/hero.less
+++ b/src/css/include/hero.less
@@ -4,12 +4,24 @@
 	min-width: 1200px;
 	box-shadow: 0 0 1px 0 rgba(82, 111, 155, .5);
 	overflow: hidden;
+	&.animate {
+		background-color: #000;
+		color: #fff;
+	}
 	@media (max-width: 991px){
 		min-width: auto;
 	}
 	&-animation {
+		background-color: #fff;
+		color: #153466;
+		position: relative;
+		transform-origin: top center;
 		&-wrapper {
-			
+			position: relative;
+			opacity: 1;
+			transform: translateX(0px) translateY(0px) translateZ(0px);
+			transform-style: preserve-3d;
+			transition: opacity 1400ms, transform 1000ms;
 		}
 	}
 }
