--- a/src/css/include/section.less
+++ b/src/css/include/section.less
@@ -9,4 +9,307 @@
 	background-color: #fff;
 	.clearfix();
 	overflow: hidden;
+	.color-line {
+		position: absolute;
+		left: 0px;
+		right: 0px;
+		bottom: 250px;
+		height: 250px;
+		min-width: 100vw;
+		background-color: #f3f4f6;
+	}
+	&-row {
+		position: relative;
+		z-index: 2;
+		display: block;
+		width: 100%;
+		margin-right: -10px;
+		margin-left: -10px;
+		.col-3 {
+			@media(max-width: 991px) and (min-width:768px) {
+				margin-bottom: 20px;
+				&:nth-child(3), &:nth-child(4) {
+					margin-bottom: 0px;
+				}
+			}
+			@media(max-width: 767px) {
+				width: 100%;
+				margin-bottom: 20px;
+				&:last-child {
+					margin-bottom: 0px;
+				}
+			}
+		}
+	}
+	&-head {
+		position: relative;
+		z-index: 2;
+		display: flex;
+		width: 100%;
+		padding-right: 10px;
+		padding-left: 10px;
+		align-items: flex-start;
+		text-align: center;
+		max-width: 1200px;
+		margin: 0px auto 40px;
+		flex-direction: row;
+		&-content {
+			display: -webkit-flex;
+			display: -ms-flexbox;
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			color:#7790b4;
+			text-align: left;
+			max-width: 595px;
+			@media (max-width: 991px) {
+				margin-right: auto;
+			}
+		}
+	}
+	&-content {
+		display: flex;
+		width: 100%;
+		max-width: 1200px;
+		min-width: 1170px;
+		margin-right: auto;
+		margin-left: auto;
+		padding-right: 10px;
+		padding-left: 10px;
+		-webkit-box-pack: justify;
+		justify-content: space-between;
+		background-color: #fff;
+		@media(max-width: 991px){
+			min-width: auto;
+		}
+		&-column {
+			width: 50%;
+			@media(max-width:991px) {
+				width: 100%;
+			}
+			&.hero {
+				&-slick {
+					z-index: 2;
+					height: auto;
+					position: relative;
+					height: 300px;
+					text-align: center;
+					min-height: 340px;
+					background-color: transparent;
+					clear: both;
+					.clearfix();
+					@media(max-width: 511px) {
+						height: auto;
+						min-height: auto;
+					}
+					img {
+						height: 300px;
+						display: block;
+						margin-right: auto;
+						@media(max-width: 991px){
+							margin-left: auto;
+						}
+						@media(max-width:511px){
+							height: auto;
+						}
+					}
+				}
+				&-photo {
+					position: relative;
+					min-height: 240px;
+					flex: 0 0 auto;
+					@media(max-width: 991px){
+						display: none;
+					}
+					img {
+						position: absolute;
+						left: 0px;
+						right: 0px;
+						bottom: 0px;
+					}
+				}
+			}
+		}
+	}
+	&-footer {
+		position: relative;
+		z-index: 2;
+		display: flex;
+		width: 100%;
+		max-width: 1200px;
+		min-height: 50px;
+		min-width: 1170px;
+		margin-top: 80px;
+		margin-right: auto;
+		margin-left: auto;
+		padding-right: 10px;
+		padding-left: 10px;
+		flex-wrap: nowrap;
+		justify-content: flex-end;
+		&.flexjustify {
+			&-left {
+				.flexjustify-left();
+			}
+			&-right {
+				.flexjustify-right();
+			}
+			&-center {
+				.flexjustify-center();
+			}
+		}
+		.button-box {
+			position: relative;
+			display: flex;
+			height: 60px;
+			min-width: 200px;
+			margin-bottom: 10px;
+			padding-right: 20px;
+			padding-left: 20px;
+			float: left;
+			justify-content: center;
+			align-items: center;
+			flex: 0 0 auto;
+			border-radius: 2px;
+			background-color: #046ecf;
+			box-shadow: 0 1px 1px 0 rgba(82, 111, 155, .5);
+			transition: box-shadow 400ms ease, background-color 400ms ease;
+			font-family: Foros;
+			color: #f3f4f6;
+			font-size: 14px;
+			font-weight: 400;
+			letter-spacing: 0.6px;
+			cursor: pointer;
+			text-decoration: none !important;
+			&:hover {
+				background-color: #05a5ff;
+				box-shadow: 0 10px 40px 0 rgba(82, 111, 155, .5);
+			}
+			> span {
+				flex: 0 0 auto;
+				font-family: Roboto, sans-serif;
+				color: #fff;
+				font-size: 16px;
+				line-height: 1.2em;
+				font-weight: 400;
+				letter-spacing: 0.6px;
+			}
+			@media(max-width: 991px){
+				min-width: 240px;
+			}
+		}
+		@media(max-width: 991px){
+			min-width: auto;
+			justify-content: center;
+		}
+	}
+	&-no {
+		&-margin {
+			width: 100%;
+			margin-right: auto;
+			margin-left: auto;
+			padding: 40px;
+			background-color: #f3f4f6;
+			&.white {
+				background-color: #ffffff;
+			}
+		}
+	}
+}
+.wrapper-name-heading {
+	position: relative;
+	z-index: 2;
+	display: flex;
+	width: 100%;
+	min-width: 1170px;
+	padding-right: 10px;
+	padding-left: 10px;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	margin-right: auto;
+	margin-left: auto;
+	@media (max-width: 991px) {
+		min-width: auto;
+	}
+}
+.button {
+	&-container {
+		&-big {
+			&-col {
+				padding: 0;
+				margin: 0;
+				list-style: none;
+				display: flex;
+				flex-direction: row;
+				justify-content: center;
+				flex-wrap: wrap;
+				align-items: center;
+				align-content: flex-start;
+				> li {
+					display: flex;
+					width: auto;
+					height: auto;
+					margin-right: 10px;
+					margin-bottom: 10px;
+					margin-left: 10px;
+					padding: 0px;
+					justify-content: center;
+					align-items: center;
+					background-color: transparent;
+					font-family: Roboto, sans-serif;
+					font-size: 16px;
+					line-height: 1.2em;
+					font-weight: 400;
+					text-align: left;
+					letter-spacing: 0.4px;
+					> a {
+						display: block;
+						transition: color 200ms ease;
+						color: #046ecf;
+						&, &:hover, &:focus {
+							text-decoration: none;
+						}
+						&:hover {
+							border-color: #fff #fff #046ecf;
+							color: #05a5ff;
+						}
+					}
+					@media (max-width: 767px) {
+						margin-left: auto;
+						margin-right: auto;
+					}
+				}
+				@media (max-width: 991px) {
+					min-width: auto;
+					max-width: 800px;
+				}
+				@media (max-width: 767px) {
+					width: 100%;
+					flex-direction: column;
+					justify-content: center;
+					flex-wrap: nowrap;
+					align-items: flex-start;
+					align-content: stretch;
+				}
+			}
+		}
+		&-section {
+			position: relative;
+			z-index: 2;
+			display: flex;
+			width: 100%;
+			max-width: 1200px;
+			min-height: 50px;
+			min-width: 1170px;
+			margin-right: auto;
+			margin-left: auto;
+			padding-right: 10px;
+			padding-left: 10px;
+			flex-wrap: nowrap;
+			justify-content: center;
+			@media(max-width:991px){
+				min-width: auto;
+			}
+		}
+	}
 }
