--- a/src/html/inc/head.jade
+++ b/src/html/inc/head.jade
@@ -1,11 +1,15 @@
-link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
-link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
-link(rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png")
-link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
-link(rel="manifest" href="/manifest.json")
-link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5")
+meta(content="width=device-width, initial-scale=1" name="viewport")
+//base(href="https://iec-triumf.github.io/site_triumf/")
+title
+	|TRIUMF
+link(rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png")
+link(rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png")
+link(rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png")
+link(rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png")
+link(rel="manifest" href="manifest.json")
+link(rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5")
 meta(name="msapplication-TileColor" content="#2d89ef")
-meta(name="msapplication-TileImage" content="/mstile-144x144.png")
+meta(name="msapplication-TileImage" content="mstile-144x144.png")
 meta(name="theme-color" content="#ffffff")
 style
 	<?php echo getFileContent('assets/templates/triumf/css/normalize.css').getFileContent('assets/templates/triumf/css/main.css');?>
