--- a/src/css/include/actions.less
+++ b/src/css/include/actions.less
@@ -27,7 +27,7 @@
 		.stok {
 			&-block {
 				&-photo {
-					background-image: url('/assets/templates/triumf/images/actions.jpg');
+					background-image: url('@{img}actions.jpg');
 				}
 			}
 		}
@@ -38,7 +38,7 @@
 		.stok {
 			&-block {
 				&-photo {
-					background-image: url('/assets/templates/triumf/images/information.jpg');
+					background-image: url('@{img}information.jpg');
 				}
 			}
 		}
