--- a/src/css/include/footer.less
+++ b/src/css/include/footer.less
@@ -352,7 +352,7 @@
 			}
 			&-contact {
 				padding: 0px 40px;
-				background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.94), rgba(255, 255, 255, 0.94)), url('/assets/templates/triumf/images/head.jpg');
+				background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.94), rgba(255, 255, 255, 0.94)), url('@{img}head.jpg');
 				background-position: 0px 0px, 50% 50%;
 				background-size: auto, cover;
 				font-family: Roboto, sans-serif;
