--- a/src/css/include/tabs.less
+++ b/src/css/include/tabs.less
@@ -127,17 +127,17 @@
 												background-repeat: no-repeat;
 												background-size: contain;
 												background-position: 50% 50%;
-												background-image: url('/assets/templates/triumf/images/info_blue.svg');
+												background-image: url('@{img}info_blue.svg');
 											}
 											&:first-child {
 												&:before {
-													background-image: url('/assets/templates/triumf/images/info_red.svg');
+													background-image: url('@{img}info_red.svg');
 												}
 											}
 											&:last-child {
 												margin-bottom: 0px;
 												&:before {
-													background-image: url('/assets/templates/triumf/images/info_green.svg');
+													background-image: url('@{img}info_green.svg');
 												}
 											}
 										}
@@ -177,7 +177,7 @@
 						
 					}
 					.photo {
-						background-image: url('/assets/templates/triumf/images/photo.jpg');
+						background-image: url('@{img}photo.jpg');
 						background-position: 50% 50%;
 						background-size: cover;
 						background-repeat: no-repeat;
