--- a/src/css/slick/slick-theme.less
+++ b/src/css/slick/slick-theme.less
@@ -4,7 +4,7 @@
 
 @slick-font-path: "/assets/templates/triumf/fonts/";
 @slick-font-family: "slick";
-@slick-loader-path: "/assets/templates/triumf/images/";
+@slick-loader-path: "@{img}";
 @slick-arrow-color: white;
 @slick-dot-color: black;
 @slick-dot-color-active: @slick-dot-color;
