--- a/src/css/include/head.less
+++ b/src/css/include/head.less
@@ -24,7 +24,7 @@
 		right: 0px;
 		bottom: 0px;
 		top: 0px;
-		background-image: linear-gradient(180deg, rgba(255,255,255,0.65), rgba(255,255,255,0.65)), url('/assets/templates/triumf/images/head.jpg');
+		background-image: linear-gradient(180deg, rgba(255,255,255,0.65), rgba(255,255,255,0.65)), url('@{img}head.jpg');
 		background-size: auto, cover;
 		background-position: 0px 0px, 50% 0px;
 		z-index: 1;
